Fixed the overlay issue and a little of the layout issue in the n]home page

--- a/src/Components/Categories/Categories.css
+++ b/src/Components/Categories/Categories.css
@@ -2,7 +2,7 @@ section.categories-section h3{
   font-family: Poppins, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #707070;
   width: 100%;
-  padding-left: 2%;
+  padding-left: 0;
   font-weight: 500;
 }
 section.categories-section{
@@ -10,7 +10,8 @@ section.categories-section{
   display: flex;
   /* min-height: 75vh; */
   min-height: 80vh;
-  padding: 2%;
+  padding: 10%;
+  /* margin-bottom: 0 !important; */
 }
 section.categories-section   {
   width: 100%;
@@ -19,7 +20,17 @@ section.categories-section   {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  margin: 100px 0 0;
+  padding: 2%;
 }
+section.categories-section  h3 {
+  padding-left: 8%;
+}
+/* @media (max-width: 414px){
+  section.categories-section  h3 {
+    padding-left: 3%;
+  }
+} */
 section.categories-section .cat{
   background-color: #707070;
   width: 320px;
